kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-app-ingress
  namespace: note-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: note-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: note-app-service
            port:
              number: 80
